--- a/src/01-bem/Offer-Panel/offer-panel.scss
+++ b/src/01-bem/Offer-Panel/offer-panel.scss
@@ -1,22 +1,11 @@
-// Offer Panel
+@import "__product";
+
 .offer-panel {
   @include margin(auto);
-  @include padding(64px null);
+  @include padding(0 null 64px);
   @include display(flex);
   @include flex-direction(row);
   flex-wrap: wrap;
-  max-width: 960px;
+  max-width: 80%;
   transition: padding 2s;
-}
-  
-  
-.offer-panel__product {
-  @include grid-column(4);
-  @include margin(null null 20px null);
-  width: 300px;
-  overflow: hidden;
-  height: 500px !important;
-  padding: 64px 16px;
-  position: relative;
-  @include box-sizing(border-box);
 }
