--- a/src/app.scss
+++ b/src/app.scss
@@ -9,10 +9,13 @@
 // MODULES
 @import "01-bem/Alert/alert";
 @import "01-bem/Offer-Panel/offer-panel";
+@import "01-bem/Product-Card/product-card";
 
 
 // Variables
-$boxShadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
+$boxShadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2),
+            0px 3px 4px 0px rgba(0, 0, 0, 0.14),
+            0px 1px 8px 0px rgba(0, 0, 0, 0.12);
 
 // Reset
 * {
@@ -33,47 +36,7 @@ body {
   background-color: shade(white, 10%);
 }
 
-
-  
-// product card
-.product-card_featured {
-  order: -1;
-}
-
-.product-card__image {
-  display: block;
-  @include size(auto 220px);
-  @include margin(null auto);
-  user-drag: none;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-drag: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-}
-  
-.product-card {
-  font-family: $helvetica;
-  background-color: white;
-  transition: all 1s;
-  box-shadow: $boxShadow;
-  h2 {
-    height: 60px;
-    text-align: center;
-  }
-  &:hover {
-    box-shadow: 0px 12px 12px -2px rgba(0, 0, 0, 0.2), 0px 12px 16px 0px rgba(0, 0, 0, 0.14), 0px 4px 32px 0px rgba(0, 0, 0, 0.12);    
-  }  
-}
-
-.product-card__info {
-  position: absolute;
-  bottom: 32px;
-  left: 50%;
-  transform: translate(-50%);
-  width: 100%;
-}
-  
+// Price Block
 
 .price {
   font-weight: bold;
@@ -107,7 +70,7 @@ body {
 }
 
 
-// MEDIA
+// MEDIA - example
 
 // TABLET
 @media screen and (max-width: 840px) {
