alert function added

--- a/src/01-bem/Offer-Panel/__product.scss
+++ b/src/01-bem/Offer-Panel/__product.scss
@@ -2,6 +2,7 @@
   @include grid-column(3);
   @include margin(null null 2rem null);
   overflow: hidden;
-  height: 37rem !important;
+  height: 45rem !important;
   @include box-sizing(border-box);
+  max-width: 300px;
 }
