alert function now takes object as an argument

--- a/src/01-bem/Alert/alert.scss
+++ b/src/01-bem/Alert/alert.scss
@@ -14,6 +14,10 @@ $success: tint(green, 20%);
   transition: all 1.5s;
 }
 
+.alert_hide {
+  @include transform(translateY(-100%));
+}
+
 .alert_danger {
   background-color: $danger;
 }
